# WaifuX-Linux

./: .gitignore  CONTRIBUTING.md  README.md
docs/: release-v38.0.94.md
linux/: CMakeLists.txt  README.md  electron-after-pack.js  electron-main.js  package-lock.json  package.json  preload.js  waifux-linux.desktop.in  waifux-linux.js
linux/app/: app.js  index.html  styles.css
linux/qml/: Main.qml
linux/src/: AppController.cpp  AppController.h  main.cpp
scripts/: package-linux.sh  render-release-doc-screenshot.js  run-linux.sh
